--- a/product.html
+++ b/product.html
@@ -2125,6 +2125,11 @@
 											</div>
 										</div>
 										<div class="gallery-main">
+											<div class="product__statuses">
+												<span class="product__status product__status--red">Акция</span>
+												<span class="product__status product__status--blue">Новинка</span>
+												<span class="product__status">Хит</span>
+											</div>
 											<div class="swiper-wrapper">
 												<div class="swiper-slide">
 													<picture>
@@ -2573,6 +2578,228 @@
 								</div>
 							</div>
 						</div>
+						<div class="product__wrap product__wrap--similar-products">
+							<div class="similar-products-content">
+								<div class="similar-products-content__slider">
+									<div class="product__slider-top similar-products-content__top">
+										<h3 class="product__title">Аналоги</h3>
+										<div class="swiper-controls product__slider-controls">
+											<button class="swiper-button-prev" aria-label="Назад">
+												<svg class="swiper-button-icon">
+													<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
+												</svg>
+											</button>
+											<button class="swiper-button-next" aria-label="Далее">
+												<svg class="swiper-button-icon">
+													<use xlink:href="img/sprite.svg#icon-arrow-next"></use>
+												</svg>
+											</button>
+										</div>
+									</div>
+									<div class="similar-products-content__slider-wrapper">
+										<div class="swiper">
+											<div class="swiper-wrapper">
+												<div class="swiper-slide">
+													<article class="catalog-card similar-products-content__item">
+														<a href="#" class="catalog-card__img">
+															<img src="img/catalog-01.png" alt="Image">
+															<div class="catalog-card__statuses">
+																<span class="catalog-card__status catalog-card__status--red">Акция</span>
+																<span class="catalog-card__status catalog-card__status--blue">Новинка</span>
+																<span class="catalog-card__status">Хит</span>
+															</div>
+														</a>
+														<div class="catalog-card__body">
+															<div class="catalog-card__group">
+																<div class="catalog-card__prices">
+																	<span class="catalog-card__price catalog-card__price--red"><span>8.09</span> руб.</span>
+																	<span class="catalog-card__price catalog-card__price--old"><span>11.20</span> руб.</span>
+																</div>
+																<a href="#" class="catalog-card__description">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп. с раствор. (вода д/инъекций в амп. 6 мл) №1) Nobelfarma Ilac Sanayii ve Ticaret A.S.-Турция</a>
+																<span class="catalog-card__note">Продается по рецепту</span>
+															</div>
+															<div class="catalog-card__group">
+																<div class="catalog-card__controls">
+																	<div class="c-quantity catalog-card__quantity">
+																		<div class="c-quantity__inner">
+																			<button class="c-quantity__btn c-quantity__btn--minus">-</button>
+																			<input type="number" class="c-quantity__value" value="1">
+																			<button class="c-quantity__btn c-quantity__btn--plus">+</button>
+																		</div>
+																	</div>
+																	<a href="#" class="catalog-card__btn btn btn--sm btn--icon-mob btn--red">
+																		<svg>
+																			<use xlink:href="img/sprite.svg#icon-basket"></use>
+																		</svg>
+																		<span>В корзине</span>
+																	</a>
+																</div>
+																<span class="catalog-card__help">Производство: Беларусь</span>
+															</div>
+														</div>
+													</article>
+												</div>
+												<div class="swiper-slide">
+													<article class="catalog-card similar-products-content__item">
+														<a href="#" class="catalog-card__img">
+															<img src="img/catalog-03.png" alt="Image">
+															<div class="catalog-card__statuses"></div>
+														</a>
+														<div class="catalog-card__body">
+															<div class="catalog-card__group">
+																<div class="catalog-card__prices">
+																	<span class="catalog-card__price"><span>3.66</span> руб.</span>
+																</div>
+																<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+																<span class="catalog-card__note is--active">Продается по рецепту</span>
+															</div>
+															<div class="catalog-card__group">
+																<div class="catalog-card__controls">
+																	<a href="#" class="catalog-card__btn btn">В корзину</a>
+																</div>
+																<span class="catalog-card__help">Производство: Беларусь</span>
+															</div>
+														</div>
+													</article>
+												</div>
+												<div class="swiper-slide">
+													<article class="catalog-card similar-products-content__item">
+														<a href="#" class="catalog-card__img">
+															<img src="img/catalog-03.png" alt="Image">
+															<div class="catalog-card__statuses"></div>
+														</a>
+														<div class="catalog-card__body">
+															<div class="catalog-card__group">
+																<div class="catalog-card__prices">
+																	<span class="catalog-card__price"><span>3.66</span> руб.</span>
+																</div>
+																<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+																<span class="catalog-card__note is--active">Продается по рецепту</span>
+															</div>
+															<div class="catalog-card__group">
+																<div class="catalog-card__controls">
+																	<a href="#" class="catalog-card__btn btn">В корзину</a>
+																</div>
+																<span class="catalog-card__help">Производство: Беларусь</span>
+															</div>
+														</div>
+													</article>
+												</div>
+												<div class="swiper-slide">
+													<article class="catalog-card similar-products-content__item">
+														<a href="#" class="catalog-card__img">
+															<img src="img/catalog-03.png" alt="Image">
+															<div class="catalog-card__statuses"></div>
+														</a>
+														<div class="catalog-card__body">
+															<div class="catalog-card__group">
+																<div class="catalog-card__prices">
+																	<span class="catalog-card__price"><span>3.66</span> руб.</span>
+																</div>
+																<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+																<span class="catalog-card__note is--active">Продается по рецепту</span>
+															</div>
+															<div class="catalog-card__group">
+																<div class="catalog-card__controls">
+																	<a href="#" class="catalog-card__btn btn">В корзину</a>
+																</div>
+																<span class="catalog-card__help">Производство: Беларусь</span>
+															</div>
+														</div>
+													</article>
+												</div>
+												<div class="swiper-slide">
+													<article class="catalog-card similar-products-content__item">
+														<a href="#" class="catalog-card__img">
+															<img src="img/catalog-03.png" alt="Image">
+															<div class="catalog-card__statuses"></div>
+														</a>
+														<div class="catalog-card__body">
+															<div class="catalog-card__group">
+																<div class="catalog-card__prices">
+																	<span class="catalog-card__price"><span>3.66</span> руб.</span>
+																</div>
+																<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+																<span class="catalog-card__note is--active">Продается по рецепту</span>
+															</div>
+															<div class="catalog-card__group">
+																<div class="catalog-card__controls">
+																	<a href="#" class="catalog-card__btn btn">В корзину</a>
+																</div>
+																<span class="catalog-card__help">Производство: Беларусь</span>
+															</div>
+														</div>
+													</article>
+												</div>
+												<div class="swiper-slide">
+													<article class="catalog-card similar-products-content__item">
+														<a href="#" class="catalog-card__img">
+															<img src="img/catalog-01.png" alt="Image">
+															<div class="catalog-card__statuses">
+																<span class="catalog-card__status catalog-card__status--red">Акция</span>
+																<span class="catalog-card__status catalog-card__status--blue">Новинка</span>
+																<span class="catalog-card__status">Хит</span>
+															</div>
+														</a>
+														<div class="catalog-card__body">
+															<div class="catalog-card__group">
+																<div class="catalog-card__prices">
+																	<span class="catalog-card__price catalog-card__price--red"><span>8.09</span> руб.</span>
+																	<span class="catalog-card__price catalog-card__price--old"><span>11.20</span> руб.</span>
+																</div>
+																<a href="#" class="catalog-card__description">МЕГАСЕФ (пор. д/приг. р-ра д/ин. 750 мг во фл. в комп. с раствор. (вода д/инъекций в амп. 6 мл) №1) Nobelfarma Ilac Sanayii ve Ticaret A.S.-Турция</a>
+																<span class="catalog-card__note">Продается по рецепту</span>
+															</div>
+															<div class="catalog-card__group">
+																<div class="catalog-card__controls">
+																	<div class="c-quantity catalog-card__quantity">
+																		<div class="c-quantity__inner">
+																			<button class="c-quantity__btn c-quantity__btn--minus">-</button>
+																			<input type="number" class="c-quantity__value" value="1">
+																			<button class="c-quantity__btn c-quantity__btn--plus">+</button>
+																		</div>
+																	</div>
+																	<a href="#" class="catalog-card__btn btn btn--sm btn--icon-mob btn--red">
+																		<svg>
+																			<use xlink:href="img/sprite.svg#icon-basket"></use>
+																		</svg>
+																		<span>В корзине</span>
+																	</a>
+																</div>
+																<span class="catalog-card__help">Производство: Беларусь</span>
+															</div>
+														</div>
+													</article>
+												</div>
+												<div class="swiper-slide">
+													<article class="catalog-card similar-products-content__item">
+														<a href="#" class="catalog-card__img">
+															<img src="img/catalog-03.png" alt="Image">
+															<div class="catalog-card__statuses"></div>
+														</a>
+														<div class="catalog-card__body">
+															<div class="catalog-card__group">
+																<div class="catalog-card__prices">
+																	<span class="catalog-card__price"><span>3.66</span> руб.</span>
+																</div>
+																<a href="#" class="catalog-card__description">АМПИЦИЛЛИНА ТРИГИДРАТ (табл. 250 мг №10х2) Белмедпрепараты РУП-Беларусь</a>
+																<span class="catalog-card__note is--active">Продается по рецепту</span>
+															</div>
+															<div class="catalog-card__group">
+																<div class="catalog-card__controls">
+																	<a href="#" class="catalog-card__btn btn">В корзину</a>
+																</div>
+																<span class="catalog-card__help">Производство: Беларусь</span>
+															</div>
+														</div>
+													</article>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -2954,22 +3181,22 @@
 								</li>
 								<li class="mobile-menu__list-item">
 									<div class="mobile-menu__list-elem">
-										<a href="#" class="mobile-menu__link mobile-menu__link--trigger">Витаминно-минеральные комплексы</a>
+										<a href="#" class="mobile-menu__link">Витаминно-минеральные комплексы</a>
 									</div>
 								</li>
 								<li class="mobile-menu__list-item">
 									<div class="mobile-menu__list-elem">
-										<a href="#" class="mobile-menu__link mobile-menu__link--trigger">Гематогены и батончики</a>
+										<a href="#" class="mobile-menu__link">Гематогены и батончики</a>
 									</div>
 								</li>
 								<li class="mobile-menu__list-item">
 									<div class="mobile-menu__list-elem">
-										<a href="#" class="mobile-menu__link mobile-menu__link--trigger">Для беременных и кормящих мам</a>
+										<a href="#" class="mobile-menu__link">Для беременных и кормящих мам</a>
 									</div>
 								</li>
 								<li class="mobile-menu__list-item">
 									<div class="mobile-menu__list-elem">
-										<a href="#" class="mobile-menu__link mobile-menu__link--trigger">Для красоты</a>
+										<a href="#" class="mobile-menu__link">Для красоты</a>
 									</div>
 								</li>
 								<li class="mobile-menu__list-item">
