--- a/search-empty.html
+++ b/search-empty.html
@@ -2841,22 +2841,22 @@
 								</li>
 								<li class="mobile-menu__list-item">
 									<div class="mobile-menu__list-elem">
-										<a href="#" class="mobile-menu__link mobile-menu__link--trigger">Витаминно-минеральные комплексы</a>
+										<a href="#" class="mobile-menu__link">Витаминно-минеральные комплексы</a>
 									</div>
 								</li>
 								<li class="mobile-menu__list-item">
 									<div class="mobile-menu__list-elem">
-										<a href="#" class="mobile-menu__link mobile-menu__link--trigger">Гематогены и батончики</a>
+										<a href="#" class="mobile-menu__link">Гематогены и батончики</a>
 									</div>
 								</li>
 								<li class="mobile-menu__list-item">
 									<div class="mobile-menu__list-elem">
-										<a href="#" class="mobile-menu__link mobile-menu__link--trigger">Для беременных и кормящих мам</a>
+										<a href="#" class="mobile-menu__link">Для беременных и кормящих мам</a>
 									</div>
 								</li>
 								<li class="mobile-menu__list-item">
 									<div class="mobile-menu__list-elem">
-										<a href="#" class="mobile-menu__link mobile-menu__link--trigger">Для красоты</a>
+										<a href="#" class="mobile-menu__link">Для красоты</a>
 									</div>
 								</li>
 								<li class="mobile-menu__list-item">
