--- a/category.html
+++ b/category.html
@@ -22,7 +22,7 @@
 	<link rel="stylesheet" href="css/app.min.css">
 </head>
 
-<body>
+<body class="header-big">
 	<!-- wrapper -->
 	<div class="wrapper">
 		<!-- header -->
@@ -80,6 +80,7 @@
 						</button>
 						<a href="#" class="header__logotype">
 							<img src="img/logotype.svg" width="255" height="27" alt="АПТЕКА ADEL">
+							<!-- <span>Аптека №25 пятой категории ООО “Фарммаркет-плюс”</span> -->
 						</a>
 						<div class="c-catalog header__catalog">
 							<button class="c-catalog__trigger">
@@ -1904,12 +1905,12 @@
 							<form action="#" class="header-search__form">
 								<input type="text" class="header-search__input" placeholder="Начать поиск" value="">
 								<div class="header-search__controls">
+									<button class="header-search__btn-search">Найти</button>
 									<button class="header-search__clear" aria-label="Очистить">
 										<svg>
 											<use xlink:href="img/sprite.svg#icon-close"></use>
 										</svg>
 									</button>
-									<button class="header-search__btn-search">Найти</button>
 								</div>
 								<button class="header-search__btn" aria-label="Поиск">
 									<svg>
@@ -2082,8 +2083,7 @@
 							</select>
 						</div>
 						<div class="page-top__inner">
-							<h2 class="page-top__heading">Антибиотики и противопротозойные средства</h2>
-							<span class="page-top__value"><span>30 817</span> товаров</span>
+							<h2 class="page-top__heading">Антибиотики и противопротозойные средства <small><span>30 817</span> товаров</small></h2>
 						</div>
 					</div>
 					<div class="catalog__wrap">
@@ -2100,6 +2100,62 @@
 											</button>
 										</div>
 										<div class="catalog-filter__main">
+											<div class="catalog-filtered catalog__filtered">
+												<div class="catalog-filtered__wrapper">
+													<div class="catalog-filtered__scroll">
+														<div class="catalog-filtered__list">
+															<div class="catalog-filtered__tag">
+																<span>от <span class="number">73</span> р.</span>
+																<button class="catalog-filtered__delete">
+																	<svg>
+																		<use xlink:href="img/sprite.svg#icon-close"></use>
+																	</svg>
+																</button>
+															</div>
+															<div class="catalog-filtered__tag">
+																<span>Активный фильтр</span>
+																<button class="catalog-filtered__delete">
+																	<svg>
+																		<use xlink:href="img/sprite.svg#icon-close"></use>
+																	</svg>
+																</button>
+															</div>
+															<div class="catalog-filtered__tag">
+																<span>Беларусь</span>
+																<button class="catalog-filtered__delete">
+																	<svg>
+																		<use xlink:href="img/sprite.svg#icon-close"></use>
+																	</svg>
+																</button>
+															</div>
+														</div>
+													</div>
+													<button class="catalog-filtered__clear">
+														<svg>
+															<use xlink:href="img/sprite.svg#icon-close"></use>
+														</svg>
+													</button>
+												</div>
+											</div>
+											<div class="catalog-links catalog-filter__links">
+												<a href="#" class="catalog-links__back">
+													<svg>
+														<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
+													</svg>
+													<span>Лекарственные препараты </span>
+												</a>
+												<ul class="catalog-links__list">
+													<li class="catalog-links__item is--active">
+														<a href="#" class="catalog-links__link">Антибиотики и противопротозойные средства</a>
+													</li>
+													<li class="catalog-links__item">
+														<a href="#" class="catalog-links__link">Антибиотики</a>
+													</li>
+													<li class="catalog-links__item">
+														<a href="#" class="catalog-links__link">Противопротозойные средства</a>
+													</li>
+												</ul>
+											</div>
 											<div class="catalog-filter__block">
 												<div class="catalog-filter__switches">
 													<label for="switch-hit" class="switch catalog-filter__switch">
@@ -2148,11 +2204,109 @@
 													</div>
 												</div>
 											</div>
-											<div class="catalog-filter__block">
+											<div class="catalog-filter__block catalog-filter__block--default">
 												<div class="catalog-filter__topping">
 													<h3 class="catalog-filter__heading">Производство</h3>
 												</div>
 												<div class="catalog-filter__scroll">
+													<div class="catalog-filter__checkboxes">
+														<div class="square-checkbox catalog-filter__checkbox catalog-filter__checkbox--preview">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-01" data-id="filter-group-01">
+															<label for="filter-group-01" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Беларусь</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox catalog-filter__checkbox--preview">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-02" data-id="filter-group-02" disabled>
+															<label for="filter-group-02" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Пакистан</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-03">
+															<label for="filter-group-03" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Россия</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-04">
+															<label for="filter-group-04" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Франция</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-05">
+															<label for="filter-group-05" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Нидерланды</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-06">
+															<label for="filter-group-06" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Германия</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-07">
+															<label for="filter-group-07" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Китай</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-08">
+															<label for="filter-group-08" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Финляндия</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-09">
+															<label for="filter-group-09" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">США</span>
+															</label>
+														</div>
+														<div class="square-checkbox catalog-filter__checkbox">
+															<input type="checkbox" class="square-checkbox__input" id="filter-group-10">
+															<label for="filter-group-10" class="square-checkbox__group">
+																<span class="square-checkbox__icon"></span>
+																<span class="square-checkbox__title">Индия</span>
+															</label>
+														</div>
+													</div>
+												</div>
+												<a href="#" class="catalog-filter__more">Показать все 22</a>
+											</div>
+											<div class="catalog-filter__block catalog-filter__block--extended">
+												<div class="catalog-filter__topping">
+													<button class="catalog-filter__back">
+														<svg>
+															<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
+														</svg>
+													</button>
+													<h3 class="catalog-filter__heading">Производство</h3>
+													<button class="catalog-filter__reset">Сбросить</button>
+												</div>
+												<div class="catalog-filter__group">
+													<div class="c-search catalog-filter__search">
+														<div class="c-search__form">
+															<input type="text" class="c-search__input" placeholder="Поиск">
+															<button class="c-search__btn" aria-label="Поиск">
+																<svg>
+																	<use xlink:href="img/sprite.svg#icon-search"></use>
+																</svg>
+															</button>
+														</div>
+													</div>
+												</div>
+												<div class="catalog-filter__scroll" data-simplebar>
 													<div class="catalog-filter__checkboxes">
 														<div class="square-checkbox catalog-filter__checkbox">
 															<input type="checkbox" class="square-checkbox__input" id="filter-group-01">
@@ -2239,7 +2393,6 @@
 															</label>
 														</div>
 													</div>
-													<a href="#" class="catalog-filter__more">Показать все 22</a>
 												</div>
 											</div>
 											<div class="catalog-filter__block">
@@ -2407,43 +2560,6 @@
 											<span>фильтр</span>
 										</button>
 									</div>
-								</div>
-							</div>
-							<div class="catalog-filtered catalog__filtered">
-								<div class="catalog-filtered__wrapper">
-									<div class="catalog-filtered__scroll">
-										<div class="catalog-filtered__list">
-											<div class="catalog-filtered__tag">
-												<span>от <span class="number">73</span> р.</span>
-												<button class="catalog-filtered__delete">
-													<svg>
-														<use xlink:href="img/sprite.svg#icon-close"></use>
-													</svg>
-												</button>
-											</div>
-											<div class="catalog-filtered__tag">
-												<span>Активный фильтр</span>
-												<button class="catalog-filtered__delete">
-													<svg>
-														<use xlink:href="img/sprite.svg#icon-close"></use>
-													</svg>
-												</button>
-											</div>
-											<div class="catalog-filtered__tag">
-												<span>Беларусь</span>
-												<button class="catalog-filtered__delete">
-													<svg>
-														<use xlink:href="img/sprite.svg#icon-close"></use>
-													</svg>
-												</button>
-											</div>
-										</div>
-									</div>
-									<button class="catalog-filtered__clear">
-										<svg>
-											<use xlink:href="img/sprite.svg#icon-close"></use>
-										</svg>
-									</button>
 								</div>
 							</div>
 							<!-- if there are results -->
@@ -2687,11 +2803,24 @@
 						<a href="index.html" class="footer__logotype">
 							<img src="img/logotype-dark.svg" width="255" height="26" alt="АПТЕКА ADEL">
 						</a>
+						<!-- <p class="footer__copyright">
+                    ООО «Управляющая компания холдинга
+                    «Аптека&nbsp;групп», 2017. Все права защищены.<br>
+                    УНП 191751593<br>
+                    220020, г. Минск, пр-т Победителей, 84, офис 16.
+                </p> -->
 						<p class="footer__copyright">
-							ООО «Управляющая компания холдинга
-							«Аптека&nbsp;групп», 2017. Все права защищены.<br>
-							УНП 191751593<br>
-							220020, г. Минск, пр-т Победителей, 84, офис 16.
+							Общество с ограниченной ответственностью "Фарммаркет-плюс"<br>
+							Свидетельство выдано Витебским областным исполнительным комитетом решением от 04 августа 2005 года №535 <br>
+							Юридический адрес:<br>
+							220073, г. Минск, ул. Кальварийская, д.44, пом. 3Н<br>
+							телефон: 80172490005<br>
+							email: fmpfmp5@gmail.com
+							<br><br>
+							Аптека №25 пятой категории по адресу: г. Минск, ул. Янки Брыля, 30-1н.<br>
+							телефон: появится позже<br>
+							email: fmp25@aptphg.by <br>
+							Режим работы Интернет-аптеки: пн-пт 8.00-21.00, сб-вс 10.00-19.00
 						</p>
 					</div>
 					<div class="footer__block">
@@ -2769,10 +2898,16 @@
 				<div class="footer__wrapper footer__wrapper--bottom">
 					<ul class="footer__list">
 						<li class="footer__list-item">
-							<a href="#" class="footer__link">Положение об обработке и защите персональных данных</a>
+							<a href="#" class="footer__link">Обработка персональных данных</a>
 						</li>
 						<li class="footer__list-item">
-							<a href="#" class="footer__link">Политикой обработки файлов cookie</a>
+							<a href="#" class="footer__link">Политика cookies</a>
+						</li>
+						<li class="footer__list-item">
+							<a href="#" class="footer__link">Договор оферты</a>
+						</li>
+						<li class="footer__list-item">
+							<a href="https://gospharmnadzor.by/" class="footer__link" target="_blank">Фармацевтический надзор</a>
 						</li>
 					</ul>
 					<ul class="footer__list">
