--- a/product-empty.html
+++ b/product-empty.html
@@ -80,6 +80,7 @@
 						</button>
 						<a href="#" class="header__logotype">
 							<img src="img/logotype.svg" width="255" height="27" alt="АПТЕКА ADEL">
+							<!-- <span>Аптека №25 пятой категории ООО “Фарммаркет-плюс”</span> -->
 						</a>
 						<div class="c-catalog header__catalog">
 							<button class="c-catalog__trigger">
@@ -1904,12 +1905,12 @@
 							<form action="#" class="header-search__form">
 								<input type="text" class="header-search__input" placeholder="Начать поиск" value="">
 								<div class="header-search__controls">
+									<button class="header-search__btn-search">Найти</button>
 									<button class="header-search__clear" aria-label="Очистить">
 										<svg>
 											<use xlink:href="img/sprite.svg#icon-close"></use>
 										</svg>
 									</button>
-									<button class="header-search__btn-search">Найти</button>
 								</div>
 								<button class="header-search__btn" aria-label="Поиск">
 									<svg>
@@ -2234,8 +2235,8 @@
 							<div class="similar-products-content">
 								<div class="similar-products-content__slider">
 									<div class="product__slider-top similar-products-content__top">
-										<h3 class="product__title">Аналоги</h3>
-										<div class="swiper-controls product__slider-controls">
+										<h3 class="similar-products-content__title">Аналоги</h3>
+										<div class="swiper-controls similar-products-content__slider-controls">
 											<button class="swiper-button-prev" aria-label="Назад">
 												<svg class="swiper-button-icon">
 													<use xlink:href="img/sprite.svg#icon-arrow-prev"></use>
@@ -2652,11 +2653,24 @@
 						<a href="index.html" class="footer__logotype">
 							<img src="img/logotype-dark.svg" width="255" height="26" alt="АПТЕКА ADEL">
 						</a>
+						<!-- <p class="footer__copyright">
+                    ООО «Управляющая компания холдинга
+                    «Аптека&nbsp;групп», 2017. Все права защищены.<br>
+                    УНП 191751593<br>
+                    220020, г. Минск, пр-т Победителей, 84, офис 16.
+                </p> -->
 						<p class="footer__copyright">
-							ООО «Управляющая компания холдинга
-							«Аптека&nbsp;групп», 2017. Все права защищены.<br>
-							УНП 191751593<br>
-							220020, г. Минск, пр-т Победителей, 84, офис 16.
+							Общество с ограниченной ответственностью "Фарммаркет-плюс"<br>
+							Свидетельство выдано Витебским областным исполнительным комитетом решением от 04 августа 2005 года №535 <br>
+							Юридический адрес:<br>
+							220073, г. Минск, ул. Кальварийская, д.44, пом. 3Н<br>
+							телефон: 80172490005<br>
+							email: fmpfmp5@gmail.com
+							<br><br>
+							Аптека №25 пятой категории по адресу: г. Минск, ул. Янки Брыля, 30-1н.<br>
+							телефон: появится позже<br>
+							email: fmp25@aptphg.by <br>
+							Режим работы Интернет-аптеки: пн-пт 8.00-21.00, сб-вс 10.00-19.00
 						</p>
 					</div>
 					<div class="footer__block">
@@ -2734,10 +2748,16 @@
 				<div class="footer__wrapper footer__wrapper--bottom">
 					<ul class="footer__list">
 						<li class="footer__list-item">
-							<a href="#" class="footer__link">Положение об обработке и защите персональных данных</a>
+							<a href="#" class="footer__link">Обработка персональных данных</a>
 						</li>
 						<li class="footer__list-item">
-							<a href="#" class="footer__link">Политикой обработки файлов cookie</a>
+							<a href="#" class="footer__link">Политика cookies</a>
+						</li>
+						<li class="footer__list-item">
+							<a href="#" class="footer__link">Договор оферты</a>
+						</li>
+						<li class="footer__list-item">
+							<a href="https://gospharmnadzor.by/" class="footer__link" target="_blank">Фармацевтический надзор</a>
 						</li>
 					</ul>
 					<ul class="footer__list">
