--- a/order-success-2.html
+++ b/order-success-2.html
@@ -2072,7 +2072,13 @@
 							</div>
 						</div>
 						<div class="order__main-wrap">
-							<h2 class="order__title">Аптека №31 ADEL, г. Минск, ул. Кирилла Туровского, 113</h2>
+							<div class="order__main-info">
+								<h2 class="order__title">Аптека №31 ADEL<span class="desktop">, г. Минск, ул. Кирилла Туровского, 113</span></h2>
+								<div class="order__main-details">
+									<p class="order__description">ст. метро "Партизанская", вестибюль 1; выход к ул. Долгобродской</p>
+									<a href="#" class="order__link">Контакты и график работы</a>
+								</div>
+							</div>
 							<div class="order__main">
 								<div class="order__products">
 									<div class="order-product order__products-item">
@@ -2131,7 +2137,13 @@
 							</div>
 						</div>
 						<div class="order__main-wrap">
-							<h2 class="order__title">Аптека №12 ADEL, г. Минск, ул. Мележа, 1</h2>
+							<div class="order__main-info">
+								<h2 class="order__title">Аптека №12 ADEL<span class="desktop">, г. Минск, ул. Мележа, 1</span></h2>
+								<div class="order__main-details">
+									<p class="order__description">г. Минск, ул. Мележа, 1</p>
+									<a href="#" class="order__link">Контакты и график работы</a>
+								</div>
+							</div>
 							<div class="order__main">
 								<div class="order__products">
 									<div class="order-product order__products-item">
@@ -2167,7 +2179,7 @@
 							</div>
 						</div>
 						<div class="order__bottom">
-							<div class="order__block order__block--fifty">
+							<div class="order__block order__block--fifty order__block--desktop">
 								<div class="pickup-point">
 									<div class="pickup-point__slider">
 										<div class="pickup-point__top">
